@@ -1,6 +1,7 @@
 2.0-rc3
 
 * Add build status endpoint to APIs
+* Use XCPretty to tidy XCode build output, if installed
 
 * Fix issue where ordering issues by type only ordered by priority
 * Correctly parse Xcode 5 test logs
